src/tests/select/snapshots/ciboulette2pg__tests__select__select_success__select_many_to_one_relationships.snap
---
source: src/tests/select/select_success.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "author",
    "related_type": "comments",
    "related_id": "[uuid]"
  }
]
